Fix: Added class flex-wrap to button container for Bootstrap 4 to allow button wrapping.
Merge pull request #164 from HannesOberreiter/master

Sync to source repo @b6ab10dd9a992eb1df7d8f2955be2de2a3927d5e

--- a/css/buttons.foundation.css
+++ b/css/buttons.foundation.css
@@ -1,3 +1,32 @@
+@keyframes dtb-spinner {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-o-keyframes dtb-spinner {
+  100% {
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-ms-keyframes dtb-spinner {
+  100% {
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes dtb-spinner {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes dtb-spinner {
+  100% {
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 div.dt-button-info {
   position: fixed;
   top: 50%;
@@ -21,6 +50,16 @@ div.dt-button-info h2 {
 }
 div.dt-button-info > div {
   padding: 1em;
+}
+
+div.dt-button-collection-title {
+  text-align: center;
+  padding: 0.3em 0 0.5em;
+  font-size: 0.9em;
+}
+
+div.dt-button-collection-title:empty {
+  display: none;
 }
 
 ul.dt-buttons li {
@@ -88,6 +127,9 @@ ul.dt-button-collection.f-dropdown.four-column {
   -o-column-count: 4;
   column-count: 4;
 }
+ul.dt-button-collection.f-dropdown .dt-button {
+  border-radius: 0;
+}
 ul.dt-button-collection.f-dropdown.fixed {
   max-width: none;
 }
@@ -121,9 +163,42 @@ div.button-group.stacked.dropdown-pane {
   z-index: 89;
 }
 div.button-group.stacked.dropdown-pane a.button {
+  display: block;
   margin-bottom: 1px;
   border-right: none;
 }
 div.button-group.stacked.dropdown-pane a.button:last-child {
   margin-bottom: 0;
+  margin-right: 1px;
+}
+
+div.dt-buttons button.button.processing,
+div.dt-buttons div.button.processing,
+div.dt-buttons a.button.processing {
+  color: rgba(0, 0, 0, 0.2);
+  color: rgba(255, 255, 255, 0.2);
+  border-top-color: white;
+  border-bottom-color: white;
+}
+div.dt-buttons button.button.processing:after,
+div.dt-buttons div.button.processing:after,
+div.dt-buttons a.button.processing:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 16px;
+  height: 16px;
+  margin: -8px 0 0 -8px;
+  box-sizing: border-box;
+  display: block;
+  content: ' ';
+  border: 2px solid #282828;
+  border-radius: 50%;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  animation: dtb-spinner 1500ms infinite linear;
+  -o-animation: dtb-spinner 1500ms infinite linear;
+  -ms-animation: dtb-spinner 1500ms infinite linear;
+  -webkit-animation: dtb-spinner 1500ms infinite linear;
+  -moz-animation: dtb-spinner 1500ms infinite linear;
 }
